--- a/Guess-the-number/style.css
+++ b/Guess-the-number/style.css
@@ -7,12 +7,12 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 60%;
     box-sizing: border-box;
 }
 
 body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: aqua;
     background-color: purple;
 }
@@ -33,7 +33,7 @@ main{
 
 .left{
     width: 52rem;
-    font-size: 2rem;
+    font-size: 8rem;
 }
 
 h1{
@@ -54,19 +54,20 @@ h1{
     padding: 3rem 0rem;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: -50%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
 
 .between{
-    font-size: 1.4rem;
+    font-size: 4rem;
     position: absolute;
     top: 2rem;
     right: 2rem;
 }
 
 .again{
+    font-size: medium;
     position: absolute;
     top: 2rem;
     left: 2rem;
@@ -86,7 +87,7 @@ h1{
 
 .btn{
     border: 2px solid rebeccapurple;
-    background-color: aliceblue;
+    background-color: rgb(13, 118, 209);
     color: black;
     font-size: 4rem;
     font-family: inherit;
@@ -100,9 +101,17 @@ h1{
 
 .message{
     margin-bottom: 8rem;
+    font-size: medium;
     height: 2rem;
 }
 
 .label-score{
+    font-size: medium;
     margin-bottom: 4rem;
+    font-weight: bold;
+}
+
+.label-highscore{
+    font-size: medium;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
